# pyparchmint

./: .deepsource.toml  .gitignore  LICENSE  README.md  component.py  connection.py  device.py  layer.py  params.py  port.py  pylintrc  pyproject.toml  scripts.py  target.py
.github/workflows/: ci.yml  push.yml  pylint.yml  pytest.yml  release.yml  workflow.yml
docs/: conf.py  index.rst  modules.rst  parchmint.rst  requirements.txt
parchmint/: __init__.py  benchmarking.py  cmdline.py  component.py  connection.py  device.py  feasibilitymatcher.py  feature.py  layer.py  params.py  port.py  similaritymatcher.py  target.py
pyparchmint/: component.py  connection.py  device.py  layer.py  params.py
schemas/: V1.json  parchmint_v1.json  parchmint_v1_2.json
tests/: conftest.py
tests/data/: dx1__diff_entity_ref.json  dx1__diff_params_ref.json  dx1__diff_ports_ref.json  dx1_ref.dot  dx1_ref.json  dx1_ref_no_par.json  dx2_ref.dot  dx2_ref.json  dx8_ref_no_par.json
tests/parchmint/: test_component.py  test_connection.py  test_device.py  test_feature.py  test_layer.py  test_params.py  test_port.py  test_similaritymatcher.py  test_target.py
