[tool.poetry]
name = "parchmint"
version = "0.2.5"
description = ""
authors = ["Radhakrishna Sanka"]
license = "BSD-3-Clause"
packages = [
    { include = "parchmint/*.py"}
]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.5"
jsonschema = "^3.2.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
parchmint-validate = "parchmint.cmdline:validate_V1"
